created /movies directory, migrated and seeded movies table, MovieList component now displays all 5 total movies, amazing

--- a/server/package.json
+++ b/server/package.json
@@ -1,5 +1,13 @@
 {
   "dependencies": {
-    "express": "^5.1.0"
+    "cors": "^2.8.5",
+    "express": "^5.1.0",
+    "knex": "^3.1.0",
+    "nodemon": "^3.1.10",
+    "pg": "^8.16.0",
+    "sqlite3": "^5.1.7"
+  },
+  "scripts": {
+    "start": "nodemon server.js"
   }
 }
